tolk-tester/tests/invalid-syntax/err-3295.tolk
fun main() {
    return 9999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999999;
}

/**
@compilation_should_fail
@stderr invalid integer constant
 */
